--- a/client.html
+++ b/client.html
@@ -20,15 +20,15 @@
 				<div data-role="popup" id="popupBasic" data-overlay-theme="a" data-position-to="window">
 					<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 					<div class="pop_cont" style="background-image : url('http://a0.twimg.com/profile_background_images/623983121/t94uekpvj4f6mmb0y07p.jpeg'); background-size:100% 100%; background-repeat:no-repeat;" >
-						<IMG class= "pop_headimg" src="http://a0.twimg.com/profile_images/2823681988/f4f6f2bed8ab4d5a48dea4b9ea85d5f1_normal.jpeg">
 						<br>
-						<img id = "pop_headimg" src="http://a0.twimg.com/profile_images/2823681988/f4f6f2bed8ab4d5a48dea4b9ea85d5f1_normal.jpeg"/>
+						<IMG class= "pop_headimg" src="http://a0.twimg.com/profile_images/2823681988/f4f6f2bed8ab4d5a48dea4b9ea85d5f1_normal.jpeg"/>
 						<br>
-						<p>name</p>
-						<p>location</p>
-						<p>description</p>
-						<p>url</p>
+						<P class="txt">name</p>
+						<P class="txt">location</p>
+						<P class="txt">description</p>
+						<P class="txt">url</p>
 						<b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</b>
+						
 					</div>
 					<div class="pop_count" >
 					</div>
