--- a/client.html
+++ b/client.html
@@ -14,8 +14,10 @@
 
 		
 		<div data-role = "page" data-theme = "a" id="main" data-inset="true">
+			<div data-role="header" data-theme="a">
+			  <h1>My favorite things</h1>
+			</div>
 			<div data-role = "content" data-theme = "a" data-inset="true" id="content">
-				<a href="#popupBasic" data-rel="popup">Open Popup</a>
 				
 				<ul data-role="listview" data-inset="true" id="items" >
 				</ul>
