add overview detail

--- a/client.html
+++ b/client.html
@@ -21,9 +21,30 @@
 			</div>
 			
 			<div data-role = "content" data-theme = "a" data-inset="true" id="content">
-				<div data-role="collapsible" data-state="collapsed" ata-collapsed-icon="plus" data-expanded-icon="minus" data-iconpos="right" id="overview" d>
-				<h2>Overview</h2>
-				<p>This page is GOOD!</p>
+				<div data-role="collapsible" data-collapsed="false" ata-collapsed-icon="plus" data-expanded-icon="minus" data-iconpos="right" id="overview" d>
+				    <h2>Overview</h2>
+				    <div data-role="collapsible" data-state="collapsed" ata-collapsed-icon="plus" data-expanded-icon="minus" data-iconpos="right" d>
+					<h2>Scroll down</h2>
+					<p>Sliding down the page:</p>
+					<p>&emsp;The webpage will load more entries.</p>
+				    </div>
+				    <div data-role="collapsible" data-state="collapsed" ata-collapsed-icon="plus" data-expanded-icon="minus" data-iconpos="right"  d>
+					<h2>Auto adjust size</h2>
+					<p>Adjusting the size of the browser: </p>
+					<p>&emsp;The icons on the webpage will rearrange automatically.</p>
+				    </div>
+				    <div data-role="collapsible" data-state="collapsed" ata-collapsed-icon="plus" data-expanded-icon="minus" data-iconpos="right"  d>
+					<h2>Pop up</h2>
+					<p>Clicking on the entry will pop up window: </p>
+					<p>&emsp;Displays the entry author's information such as their name, location etc.</p>
+					<p>&emsp;The information that is displayed include name, location, description of the author, their personal website.</p>
+					<p>&emsp;Number of followers and friends they have, Number of times the tweet has been favourited and the content of that tweet.</p>
+				    </div>
+				     <div data-role="collapsible" data-state="collapsed" ata-collapsed-icon="plus" data-expanded-icon="minus" data-iconpos="right" d>
+					<h2>Swipe</h2>
+					<p>After pop shows up: </p>
+					<p>&emsp;You can go to the next entry or previous entry by left Swipe left or right respectively.</p>
+				    </div>
 				</div>
 				
 				<ul data-role="listview" data-inset="true" id="items" >
