--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3>
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a>Sprint 0 - Preliminary.</h3>
 
-<p>User stories: <a href="https://github.com/onepic/onepic/edit/gh-pages/foo.html">User stories</a></p>
+<p>User stories: <a href="foo.html">User stories</a></p>
 
 <p>Persona 1: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/fieldworker.pdf">Fieldworker</a></p>
 
